test/message/test-error.out
test-error.js:1:6
throw new Error('message')
      ^
Error: message
  at test-error.js:1:7
  at ModuleJob.run (loader/module_job:42:26)
